fix comment style on mobile

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -46,6 +46,10 @@ div#article-comments {
 			}
 		}
 	}
+	button {
+		display: block;
+		margin: 5px auto;
+	}
 }
 
 div#article-similar {
